add card reveal, add item comparison, add click restriction

--- a/starter-code/memory.css
+++ b/starter-code/memory.css
@@ -1,21 +1,22 @@
 html {
-  background: url(img/background.jpg) no-repeat;
+  background: url(http://www.walldevil.com/wallpapers/a87/wallpaper-avengers-cartoon.jpg) no-repeat;
   background-size: cover;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 #memory_board {
   background: #dddddd;
+  opacity: 0.8;
 	width:800px;
 	height:540px;
-	padding:70px;
-	margin:0px auto;
-  border-radius: 84px;
-  box-shadow: inset 0px 0px 20px -6px rgba(97,89,97,1);
+	padding:10px;
+	margin-top: 0;
+  margin-left: 10%;
+  border-radius: 24px;
 }
 
 
-.card .back {
+.card {
   background-color: #456783;
 	width:71px;
 	height:71px;
@@ -24,8 +25,20 @@ html {
 	padding:20px;
 	font-size:64px;
 }
-.card .front.blocked,
-.card .back.blocked {
+
+
+.actual-image{
+}
+
+.front{
+  display: none;
+  width: inherit;
+  height: inherit;
+	float:left;
+	padding:0;
+}
+
+.blockClick {
   pointer-events: none;
 }
 
@@ -35,31 +48,30 @@ html {
   font-size: 30px;
   font-family: Arial;
   width:200px;
-  padding: 20px;
+  padding: 10px;
   padding-top: 0;
-  margin-left: 75%;
+  margin-left: 10%;
 }
 
 .container {
   position: relative;
+
 }
 
 h1 {
   color: rgba(215, 40, 40, 0.9);
   font-weight: bolder;
-  font-size: 67px;
+  font-size: 30px;
   text-align: center;
-  text-shadow: 0px 0px 20px rgba(150, 150, 150, 1);
+  margin-bottom: 0;
 
 }
 
 h2 {
-  color: #456783;
+  color: #white;
   font-weight: bolder;
   font-size: 35px;
   text-align: center;
-  text-shadow: 1px #ff0000;
-  text-shadow: 1px #ff0000;
 }
 
 p {
